alb-log-viewer/docs/alb-log-viewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-log-viewer
  namespace: monitoring
spec:
  selector:
    app: alb-log-viewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
